--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2069,6 +2069,27 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 97: April 6 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            NSA NCX Cyber Exercise <br><br>
+            <a href="https://academy.hackthebox.com/module/87" target="_blank">Setting Up</a> : HackTheBox Academy <br><br>
+            Computer Security Association Meeting <br><br>
+            Cyber Defenders Meeting <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/geekculture/spring4shell-exploit-walkthrough-9843c0244b68" target="_blank">Spring4Shell Exploit Walkthrough</a> : Alexis Rodriguez <br><br>
+            <a href="https://sapt.medium.com/subdomain-enumeration-tool-dome-cyber-sapiens-internship-task-22-43aa95891511" target="_blank">Subdomain Enumeration Tool -Dome-Cyber Sapiens Internship Task-22</a> : Prajit Sindhkar <br><br>
+            <a href="https://infosecwriteups.com/pyramid-of-pain-bf9d8653803" target="_blank">Pyramid Of Pain</a> Security Lit Limited <br><br>
+            <a href="https://medium.com/@turkishhoodie010/exploit-development-writing-a-simple-buffer-script-93e06f0d66a2" target="_blank">Exploit Development(Writing a Simple Buffer script)</a> : Ahmet Göker <br><br>
+            <a href="https://infosecwriteups.com/another-admin-panel-e0489dc76678" target="_blank">Another Admin panel</a> : Rizwan_siddiqui <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
