--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2090,6 +2090,25 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 98: April 7 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/18" target="_blank">Linux Fundamentals</a> : HTB Academy <br><br>
+            Security+ <br><br>
+            CCDC Meeting <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/picoctf-2022-writeup-53633ac84ed6" target="_blank">picoCTF 2022- Writeup</a> : Vishnuram Rajkumar <br><br>
+            <a href="https://medium.com/@shaunwhorton/pnpt-practical-network-penetration-tester-review-d2000bcb4e0b" target="_blank">PNPT: Practical Network Penetration Tester — Review</a> : Shaun Whorton <br><br>
+            <a href="https://4noobies.medium.com/a-deep-dive-into-vulnerability-analysis-4bf2b993ebb0" target="_blank">A deep dive into Vulnerability Analysis</a> : Josué Carvajal <br><br>
+            <a href="https://blog.devgenius.io/attacking-arp-learn-networking-by-breaking-stuff-for-bug-bounty-hunters-penetration-testers-and-73d33d30fbef" target="_blank">Attacking ARP Tables: A Fundamental Networking Attack for Bug Bounty Hunters & Penetration Testers</a> : Daniel Hunt <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
