--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2109,6 +2109,27 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 99: April 8 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://nationalcyberleague.org/" target="_blank">The National Cyber League</a> <br><br>
+            <a href="https://academy.hackthebox.com/module/details/18" target="_blank">Linux Fundamentals</a> : HTB Academy <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/geekculture/oauth-pen-testing-part-1-ae3f961a760a" target="_blank">OAuth Pen Testing: Part 1</a> : Alexis Rodriguez <br><br>
+            <a href="https://infosecwriteups.com/series-of-network-fundamentals-5-ports-protocols-to-get-started-in-cyber-security-a1adada9dbdb" target="_blank">Series of Network Fundamentals #5 (Ports & Protocols),to get started in Cyber Security.</a> : C M UPPIN <br><br>
+            <a href="https://medium.com/@cyberxprite/an-interesting-rate-limit-bypass-2d4728699f71" target="_blank">An Interesting Rate Limit Bypass..</a> : CyberXprite <br><br>
+            <a href="https://medium.com/@harishhacker3010/how-i-hacked-the-irctc-database-in-5-mins-86954f2261db" target="_blank">How I Hacked the IRCTC database in 5 mins!</a> : Harish SG <br><br>
+            <a href="https://medium.com/@harishhacker3010/how-i-hacked-nasa-to-execute-arbitrary-commands-in-their-server-29d44292a60a" target="_blank">How I Hacked NASA to execute arbitrary commands in their server!</a> : Harish SG <br><br>
+            <a href="https://medium.com/@StealthyBugs/http-request-smuggling-on-business-apple-com-and-others-2c43e81bcc52" target="_blank">HTTP Request Smuggling on business.apple.com and Others.</a> : Stealthy <br><br>
+            <a href="https://cyberpj.medium.com/picoctf2022-forensics-writeups-35b49d045770" target="_blank">Picoctf2022 Forensics Writeups</a> : P4ul Jeremi4h <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
