--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2130,6 +2130,28 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 100: April 9 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://nationalcyberleague.org/" target="_blank">The National Cyber League</a> <br><br>
+            Security+ <br><br>
+            <a href="https://app.hackthebox.com/starting-point" target="_blank">Starting Point: Responder</a> : HackTheBox <br><br>
+            <a href="https://academy.hackthebox.com/module/88" target="_blank">Introduction To Python3</a> : HackTheBox Academy <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/python-2-vulnerabilities-c3a3779f6fc" target="_blank">Understanding Python 2 Vulnerabilities</a> : Security Lit Limited <br><br>
+            <a href="https://medium.com/geekculture/oauth-pen-testing-part-2-111de2794d79" target="_blank">OAuth Pen Testing: Part 2</a> : Alexis Rodriguez <br><br>
+            <a href="https://medium.com/hackenproof/catching-a-bug-in-under-12-minutes-2bbc2b66fb77" target="_blank">Catching a bug in under 12 minutes</a> : Dasha Korotkykh <br><br>
+            <a href="https://systemweakness.com/how-to-enumerate-smb-for-ethical-hackers-and-pentesters-29e4ac4da3c4" target="_blank">How to enumerate SMB (for ethical hackers and pentesters)</a> : Falken Smaze <br><br>
+            <a href="https://takshilp.medium.com/beginner-bug-bounty-guide-part-4-765c6bfd0562" target="_blank">Beginner Bug Bounty Guide — Part 4</a> : Takshil Patil <br><br>
+            <a href="https://medium.com/@h4ckibl3_asutosh/an-introduction-to-rfid-hacking-d0d7df09f1fe" target="_blank">An introduction to RFID hacking</a> : Asutosh Kumar <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
