--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -70,8 +70,8 @@
               <button class="dropbtn">April</button>
               <div class="dropdown-content">
                 <a href="#week13">Week 13</a>
+                <a href="#week14">Week 14</a>
                 <!--
-                <a href="#week10">Week 10</a>
                 <a href="#week11">Week 11</a>
                 <a href="#week12">Week 12</a>
                 -->
@@ -2109,6 +2109,7 @@
         <br><br>
       </p>
       <br><br>
+      <h2 id="week14">Week 14</h2> <br><br><br>
       <h3>Day 99: April 8 2022</h3><br>
       <p>
         <h5>My Activities</h5>
@@ -2152,6 +2153,8 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 101: April 10 2022</h3><br>
+      <p>Break Day</p>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
