--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2155,6 +2155,28 @@
       <br><br>
       <h3>Day 101: April 10 2022</h3><br>
       <p>Break Day</p>
+      <br><br>
+      <h3>Day 102: April 11 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            NSA NCX Cyber Exercise <br><br>
+            <a href="https://app.hackthebox.com/starting-point" target="_blank">Starting Point: Responder</a> : HackTheBox <br><br>
+            <a href="https://tryhackme.com/games/koth" target="_blank">King Of The Hill</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://infosecwriteups.com/thm-attacktive-directory-7db6d7e5b0f5" target="_blank">THM: Attacktive Directory</a> : Hacktivities <br><br>
+            <a href="https://medium.com/@k4k4r07/how-a-youtube-video-lead-to-pwning-a-web-application-via-sql-injection-worth-4324-bounty-285f0a9b9f6c" target="_blank">How a YouTube Video lead to pwning a web application via SQL Injection worth $4324 bounty</a> : Vishal Saini <br><br>
+            <a href="https://takshilp.medium.com/beginner-bug-bounty-guide-part-5-94f10080b3bd" target="_blank">Beginner Bug Bounty Guide - Part 7</a> : Takshil Patil <br><br>
+            <a href="https://systemweakness.com/my-own-website-hacking-guide-active-reconnaissance-f697dbf23c8" target="_blank">My Own Website Hacking Guide (Active Reconnaissance)</a> : Billy Andrew Amurao <br><br>
+            <a href="https://gokulap.medium.com/how-i-got-access-to-1600k-users-pii-data-64a27a540963" target="_blank">How i got access to 1600k Users PII Data $$$$</a> : Gokul AP <br><br>
+            <a href="https://johnchakauya.medium.com/oscp-journey-how-i-passed-oscp-with-100-points-in-10-hours-32e918cef084" target="_blank">OSCP Journey: How I Passed OSCP with 100 points in 10 hours</a> : John Chakauya <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
