--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2160,6 +2160,7 @@
       <p>
         <h5>My Activities</h5>
           <p>
+            Security+ <br><br>
             NSA NCX Cyber Exercise <br><br>
             <a href="https://app.hackthebox.com/starting-point" target="_blank">Starting Point: Responder</a> : HackTheBox <br><br>
             <a href="https://tryhackme.com/games/koth" target="_blank">King Of The Hill</a> : TryHackMe <br><br>
@@ -2173,6 +2174,26 @@
             <a href="https://systemweakness.com/my-own-website-hacking-guide-active-reconnaissance-f697dbf23c8" target="_blank">My Own Website Hacking Guide (Active Reconnaissance)</a> : Billy Andrew Amurao <br><br>
             <a href="https://gokulap.medium.com/how-i-got-access-to-1600k-users-pii-data-64a27a540963" target="_blank">How i got access to 1600k Users PII Data $$$$</a> : Gokul AP <br><br>
             <a href="https://johnchakauya.medium.com/oscp-journey-how-i-passed-oscp-with-100-points-in-10-hours-32e918cef084" target="_blank">OSCP Journey: How I Passed OSCP with 100 points in 10 hours</a> : John Chakauya <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 103: April 12 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/88" target="_blank">Introduction To Python3</a> : HackTheBox Academy <br><br>
+            <a href="https://app.hackthebox.com/machines/158" target="_blank">Frolic</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>
+            <a href="https://medium.com/@a.alhamali93/how-my-instagram-account-got-hacked-lessons-learned-f47205d1afef" target="_blank">How my Instagram account got hacked: Lessons Learned</a> : AbdulRahman AlHamali <br><br>
+            <a href="https://davidoneill4444.medium.com/active-directory-attacks-46ac2c7d7186" target="_blank">Active Directory Attacks</a> : David Oneill <br><br>
+            <a href="https://medium.com/@the_harvester/enumeration-e7c4c679f63f" target="_blank">Enumeration</a> : Ansh Vaid <br><br>
+            <a href="https://medium.com/the-ciso-den/must-read-books-for-cybersecurity-professionals-486f81075c83" target="_blank">Must read books for cybersecurity professionals</a> : Vicente Aceituno Canal <br><br>
+            <a href="https://medium.com/dark-roast-security/dark-side-123-intro-to-shells-netcat-c5dc92e5a1a0" target="_blank">Dark Side 122: Intro to Shells & Netcat</a> : Katlyn Gallo <br><br>
+            <a href="https://akash-venky091.medium.com/broken-access-control-logic-s-c555d5f8536d" target="_blank">Broken Access Control Logic`s</a> : Akash Venky <br><br>
           </p>
         <br><br>
       </p>
