--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2198,6 +2198,10 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 104: April 13 2022</h3><br>
+      <p>NSA NCX Cyber Combat Exercise</p>
+      <p>Computer Security Association Meeting</p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
