--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2202,6 +2202,26 @@
       <p>NSA NCX Cyber Combat Exercise</p>
       <p>Computer Security Association Meeting</p>
       <br><br>
+      <h3>Day 105: April 14 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://nationalcyberleague.org/" target="_blank">The National Cyber League</a> <br><br>
+            <a href="https://academy.hackthebox.com/module/35" target="_blank">Web Requests</a> : HTB Academy <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://infosecwriteups.com/how-hackers-impersonate-email-ids-email-spoofing-and-phishing-attacks-a215fcf9341b" target="_blank">How hackers impersonate email-id’s : Email Spoofing and Phishing Attacks</a> : Gourav Dhar <br><br>
+            <a href="https://sapt.medium.com/basics-of-api-cyber-sapiens-internship-task-24-f2aa6751b301" target="_blank">Basics of API -Cyber Sapiens Internship Task-24</a> : Prajit Sindhkar <br><br>
+            <a href="https://medium.com/@charanreddy_58844/dlithe-cyber-security-internship-8a4821fcb972" target="_blank">DLithe Cyber Security Internship</a> : Charan Reddy <br><br>
+            <a href="https://hellfire0x01.medium.com/get-familiar-with-dns-hijacking-2215a0a318d4" target="_blank">Get familiar with DNS Hijacking</a> : Akshat Gupta <br><br>
+            <a href="https://medium.com/hackenproof/hacker-interview-2-alvin-steiner254-56ce7731e33f" target="_blank">Hacker Interview #2: Alvin “Steiner254”</a> : Dasha Korotkykh <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
