--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -71,8 +71,8 @@
               <div class="dropdown-content">
                 <a href="#week13">Week 13</a>
                 <a href="#week14">Week 14</a>
+                <a href="#week15">Week 15</a>
                 <!--
-                <a href="#week11">Week 11</a>
                 <a href="#week12">Week 12</a>
                 -->
               </div>
@@ -2218,6 +2218,25 @@
             <a href="https://medium.com/@charanreddy_58844/dlithe-cyber-security-internship-8a4821fcb972" target="_blank">DLithe Cyber Security Internship</a> : Charan Reddy <br><br>
             <a href="https://hellfire0x01.medium.com/get-familiar-with-dns-hijacking-2215a0a318d4" target="_blank">Get familiar with DNS Hijacking</a> : Akshat Gupta <br><br>
             <a href="https://medium.com/hackenproof/hacker-interview-2-alvin-steiner254-56ce7731e33f" target="_blank">Hacker Interview #2: Alvin “Steiner254”</a> : Dasha Korotkykh <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h2 id="week15">Week 15</h2> <br><br><br>
+      <h3>Day 106: April 15 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://dctf.dragonsec.si/" target="blank"_>DCTF</a> <br><br>
+            <a href="https://academy.hackthebox.com/module/details/75" target="_blank">Introduction to Web Applications</a> : HTB Academy <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://jodiskripe.medium.com/my-ejpt-journey-2ead69bc1927" target="_blank">My eJPT Journey</a> : Siddharth Johri <br><br>
+            <a href="https://jodiskripe.medium.com/pre-pwk-c5c1977b0baf" target="_blank">OSCP-JOURNAL</a> : Siddharth Johri <br><br>
+            <a href="https://infosecwriteups.com/bypass-rate-limit-a-blank-space-leads-to-this-random-encounter-e18e72fbf228" target="_blank">Bypass Rate Limit — A blank space leads to this random encounter!</a> : Roxst4r <br><br>
+            <a href="https://infosecwriteups.com/bitb-browser-in-the-browser-attack-e2008c405701" target="_blank">BITB (browser in the browser)Attack</a> : Surya Dev Singh <br><br>
           </p>
         <br><br>
       </p>
