--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2241,6 +2241,8 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 107: April 16 2022 - Day 108: April 17 2022</h3><br>
+      <p>Break Days</p><br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
