--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2243,6 +2243,26 @@
       <br><br>
       <h3>Day 107: April 16 2022 - Day 108: April 17 2022</h3><br>
       <p>Break Days</p><br><br>
+      <h3>Day 109: April 18 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/75" target="_blank">Introduction to Web Applications</a> : HTB Academy <br><br>
+            OSCP Prep <br><br>
+            <a href="https://app.hackthebox.com/machines/1" target="_blank">Lame</a> : HackTheBox <br><br>
+            Security+ <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://vanmieghem.io/blueprint-for-evading-edr-in-2022/" target="_blank">A blueprint for evading industry leading endpoint protection in 2022</a> : Vincent Van Mieghem <br><br>
+            <a href="https://medium.com/swlh/intro-to-reverse-engineering-45b38370384" target="_blank">Intro to Reverse Engineering</a> : Vickie Li <br><br>
+            <a href="https://mr23r0.medium.com/crazy-smiple-insecure-design-300-bounty-16a2b8e80522" target="_blank">Crazy Simple Insecure Design & 300$ Bounty!</a> : Saransh Saraf aka (MR23R0) <br><br>
+            <a href="https://debprasadbanerjee502.medium.com/united-nations-bug-bounty-writeup-4bcfdefbb8d3" target="_blank">United Nations bug bounty[writeup]</a> : Debprasad Banerjee <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
