--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2263,6 +2263,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 110: April 19 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/machines/1" target="_blank">Lame</a> : HackTheBox <br><br>
+            OSCP Prep <br><br>
+            <a href="https://academy.hackthebox.com/module/134" target="_blank">Web Attacks</a> : HackTheBox Academy <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://bin3xish477.medium.com/operation-tourniquet-2be6821a2387" target="_blank">Operation Tourniquet</a> : Alexis Rodriguez <br><br>
+            <a href="https://rashahacks.medium.com/change-any-user-profile-details-on-disney-837ab3a5d1bb" target="_blank">Change Any User Profile Details on Disney</a> : Inderjeet Singh - rashahacks <br><br>
+            <a href="https://medium.com/@sathvika03/open-redirection-broken-link-hijacking-7f5c36798be6" target="_blank">Open Redirection & Broken Link Hijacking</a> : Sathvika <br><br>
+            <a href="https://medium.com/@adanafigen/what-is-arp-in-networking-db955303b648" target="_blank">What is ARP in Networking?</a> Figen Adana <br><br>
+            <a href="https://medium.com/@tinopreter/pivoting-port-forwading-a463c45d3aa0" target="_blank">PIVOTING & PORT FORWADING</a> : Clement 'Tino <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
