--- a/WebPages/competitions.html
+++ b/WebPages/competitions.html
@@ -24,9 +24,11 @@
           <li class="nav-item">
             <a class="nav-link" href="#universitycomps">University Competitions</a>
           </li>
+          <!--
           <li class="nav-item">
             <a class="nav-link" href="#ctfs">CTF Competitions</a>
           </li>
+          -->
         </ul>
       </div>
     </div>
@@ -37,7 +39,7 @@
       <div class="des">
         <img src="/img/Insta.png" class="img-fluid round"> <br><br><br>
         <h1>Competitions</h1> <br><br>
-        <h2 id="universitycomps" style="color:red">University Competitions</h2><br><br>
+        <!-- <h2 id="universitycomps" style="color:red">University Competitions</h2><br><br> -->
         <h1 style="color:DodgerBlue">NCAE Cyber Games 2022</h1><br>
         <p>
         Role: Captain <br><br>
@@ -64,6 +66,18 @@
         <img src="/img/ccdc-trophy2.png" alt="CCDC" width="250" height="225">
         </p>
         <br><br><br><br>
+        <h1 id="ccdc" style="color:DodgerBlue">National Security Agency National Cyber Exercise 2022</h1><br>
+        <p>
+          Role: Member <br><br>
+          Member of the University of Texas at San Antonio’s Malware and Cyber Combat Exercise Teams. NCX is a year-round education, training and
+          exercise program that culminates in a three-day cyber competition that challenges participating academy and military service college students
+          in near full-spectrum cyber operations.
+          <br></br>
+          <a href="https://www.nsa.gov/">
+            <img src="/img/nsa.png" alt="NSA NCX">
+          </a>
+        </p>
+        <br><br>
         <!--
         <h2 id="ctfs" style="color:red">CTF Competitions</h2><br><br>
         <h3 style="color:greenyellow"><strong>Team Name: <a href="https://ctftime.org/team/168545" class="text-decoration-none" target="_blank">Binary Banditz</strong></a></h3><br><br>
