--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2283,6 +2283,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 111: April 20 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            OSCP Prep <br><br>
+            <a href="https://academy.hackthebox.com/module/134" target="_blank">Web Attacks</a> : HackTheBox Academy <br><br>
+            <a href="https://app.hackthebox.com/machines/158" target="_blank">Frolic</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://vinsloev.medium.com/python-wireless-network-listener-where-has-your-devices-been-5fbf007b02af" target="_blank">Python Wireless Network Listener — Where has your devices been?</a> : Vinsloev <br><br>
+            <a href="https://medium.com/pentesternepal/sql-injection-in-harvards-subdomain-c3148f8be156" target="_blank">SQL Injection in Harvard’s Subdomain</a> : Bibek Neupane <br><br>
+            <a href="https://medium.com/@Huntsmn/my-first-bug-bounty-reward-1abdd0bd0e1c" target="_blank">My First Bug Bounty Reward $$$</a> : Huntsman <br><br>
+            <a href="https://medium.com/hackingmill/privilege-escalation-linux-part-1-8efce332f76d" target="_blank">Privilege Escalation (Linux) — Part 1</a> : LumberJohn <br><br>
+            <a href="https://infosecwriteups.com/day-12-internet-security-controls-100daysofhacking-b407129a452b" target="_blank">Day 12 Internet Security Controls #100DaysofHacking</a> : Ayush Verma <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
