--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2303,6 +2303,25 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 112: April 21 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/134" target="_blank">Web Attacks</a> : HackTheBox Academy <br><br>
+            OSCP Prep <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://medium.com/@vflexo/full-account-takeover-via-open-redirection-41c167db46" target="_blank">Full Account Takeover via Open Redirection</a> : vFlexo <br><br>
+            <a href="https://warnerchad.medium.com/opencti-cyber-threat-intelligence-platform-intro-8e88aa26fb77" target="_blank">OpenCTI Cyber Threat Intelligence Platform Intro</a> : Chad Warner <br><br>
+            <a href="https://infosecwriteups.com/1000-how-i-could-have-hack-any-account-and-become-a-billionaire-overnight-top-crypto-trading-ff0e25b6013c" target="_blank">$1000: How I could have Hack any account and become a billionaire overnight👑Top Crypto-Trading Platform</a> : Gowtham_Naidu <br><br>
+            <a href="https://medium.com/@0x2nac0nda/first-bug-in-bugcrowd-using-github-dork-ef8c42944c26" target="_blank">First Bug in Bugcrowd Using Github Dork</a> : abdallah abdelrahman <br><br>
+            <a href="https://haox-hapot.medium.com/the-first-big-thing-in-web-hacking-authentication-faaf9aa2c7d0" target="_blank">The First Big Thing in Web Hacking: Authentication</a> : Haox <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
