--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2322,6 +2322,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 113: April 22 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://nationalcyberleague.org/" target="_blank">The National Cyber League</a> <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://medium.com/@rbspider/account-takeover-by-password-reset-function-9b5271d02265" target="_blank">Account Takeover By Password Reset Function.</a> : RBspider <br><br>
+            <a href="https://aravindnotes.medium.com/beginners-guide-to-becoming-a-professional-bug-bounty-hunter-3074e5cca6b8" target="_blank">Beginner's Guide to Becoming a Professional Bug Bounty Hunter</a> : Aravind Akuthota <br><br>
+            <a href="https://medium.com/codex/learning-more-about-dll-hijacking-f4022102ca1d" target="_blank">Learning more about DLL Hijacking</a> : Security Lit Limited <br><br>
+            <a href="https://medium.com/@turkishhoodie010/arp-cache-poi%CC%87soni%CC%87ng-9c8b81944308" target="_blank">ARP-CACHE-POİSONİNG</a> : Ahmet Göker <br><br>
+            <a href="https://medium.com/geekculture/dns-over-https-vs-dns-over-tls-cbfc96c283db" target="_blank">DNS over HTTPS Vs DNS over TLS</a> : R. Gupta <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
