--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -72,9 +72,7 @@
                 <a href="#week13">Week 13</a>
                 <a href="#week14">Week 14</a>
                 <a href="#week15">Week 15</a>
-                <!--
-                <a href="#week12">Week 12</a>
-                -->
+                <a href="#week16">Week 16</a>
               </div>
             </div>
           </li>
@@ -2322,6 +2320,7 @@
         <br><br>
       </p>
       <br><br>
+      <h2 id="week16">Week 16</h2> <br><br><br>
       <h3>Day 113: April 22 2022</h3><br>
       <p>
         <h5>My Activities</h5>
