--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2339,6 +2339,27 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 114: April 23 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/9" target="_blank">Learning Process</a> : HackTheBox Academy <br><br>
+            <a href="https://academy.hackthebox.com/module/134" target="_blank">Web Attacks</a> : HackTheBox Academy <br><br>
+            <a href="https://app.hackthebox.com/machines/254" target="_blank">Blunder</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/machines/Late" target="_blank">Late</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://infosecwriteups.com/how-i-bypass-2fa-while-resetting-password-3f73bf665728" target="_blank">How I Bypassed 2FA while Resetting Password</a> : Sufiyan Gouri <br><br>
+            <a href="https://medium.com/@passyourcert24/how-to-prepare-offensive-security-certified-professional-oscp-exam-4c37764e8b10" target="_blank">How to prepare Offensive Security Certified Professional (OSCP) Exam</a> : passyourcert <br><br>
+            <a href="https://medium.com/r3d-buck3t/attacking-service-accounts-with-kerberoasting-with-spns-de9894ca243f" target="_blank">Attacking Service Accounts with Kerberoasting</a> : Nairuz Abulhul <br><br>
+            <a href="https://infosecwriteups.com/exploiting-password-reset-poisoning-b748797f0661" target="_blank">Exploiting Password Reset Poisoning</a> : m8r0wn <br><br>
+            <a href="https://medium.com/codex/subdomain-takeover-and-how-the-things-evolved-with-domain-verification-98aa5f49253f" target="_blank">Subdomain Takeover and How the things evolved with Domain Verification</a> : Gupta Bless <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
