--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2360,6 +2360,26 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 115: April 24 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/machines/254" target="_blank">Blunder</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/machines/Late" target="_blank">Late</a> : HackTheBox <br><br>
+            <a href="https://nationalcyberleague.org/" target="_blank">The National Cyber League</a> <br><br>
+            <a href="https://academy.hackthebox.com/module/details/21" target="_blank">Introduction to Bash Scripting</a> : HackTheBox Academy <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://as745591.medium.com/albussec-penetration-list-02-file-upload-vulnerability-part-1-f324ffd57df" target="_blank">AlbusSec:- Penetration-list 02 File Upload Vulnerability — Part-1</a> : Albus Security <br><br>
+            <a href="https://infosecwriteups.com/serialization-deserialization-attacks-on-php-d5fb02e29248" target="_blank">Serialization&Deserialization Attacks</a> : zer0d <br><br>
+            <a href="https://xstag0.medium.com/how-to-hack-with-google-dorks-e1a36a2a3bff" target="_blank">How To Hack With Google Dorks</a> : Xstag0 <br><br>
+            <a href="https://medium.com/swlh/linux-privilege-escalation-in-four-ways-eedb52903b3" target="_blank">Linux Privilege Escalation in Four Ways</a> : Vickie Li <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
