--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2325,7 +2325,7 @@
       <p>
         <h5>My Activities</h5>
           <p>
-            <a href="https://nationalcyberleague.org/" target="_blank">The National Cyber League</a> <br><br>
+            <a href="https://nationalcyberleague.org/" target="_blank">National Cyber League</a> <br><br>
           </p>
         <br><br>
         <h5>Blogs Reads</h5>
@@ -2366,7 +2366,7 @@
           <p>
             <a href="https://app.hackthebox.com/machines/254" target="_blank">Blunder</a> : HackTheBox <br><br>
             <a href="https://app.hackthebox.com/machines/Late" target="_blank">Late</a> : HackTheBox <br><br>
-            <a href="https://nationalcyberleague.org/" target="_blank">The National Cyber League</a> <br><br>
+            <a href="https://nationalcyberleague.org/" target="_blank">National Cyber League</a> <br><br>
             <a href="https://academy.hackthebox.com/module/details/21" target="_blank">Introduction to Bash Scripting</a> : HackTheBox Academy <br><br>
           </p>
         <br><br>
@@ -2376,6 +2376,26 @@
             <a href="https://infosecwriteups.com/serialization-deserialization-attacks-on-php-d5fb02e29248" target="_blank">Serialization&Deserialization Attacks</a> : zer0d <br><br>
             <a href="https://xstag0.medium.com/how-to-hack-with-google-dorks-e1a36a2a3bff" target="_blank">How To Hack With Google Dorks</a> : Xstag0 <br><br>
             <a href="https://medium.com/swlh/linux-privilege-escalation-in-four-ways-eedb52903b3" target="_blank">Linux Privilege Escalation in Four Ways</a> : Vickie Li <br><br>
+          </p>
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 116: April 25 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/machines/452" target="_blank">Timelapse</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/machines/Late" target="_blank">Late</a> : HackTheBox <br><br>
+            <a href="https://www.youtube.com/playlist?list=PLeSXUd883dhjmKkVXSRgI1nJEZUDzgLf_" target="_blank">Pwn Zero to Hero</a> : PinkDraconian <br><br>
+            University Cyber Security Talk <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://medium.com/geekculture/generating-username-wordlists-3bf15c68eef9" target="_blank">Generating Username Wordlists</a> : Alexis Rodriguez <br><br>
+            <a href="https://infosecwriteups.com/how-to-perform-a-basic-sql-injection-attack-ethical-hacking-f59e5ccbe51f" target="_blank">How to perform a basic SQL Injection Attack? — Ethical Hacking</a> : Gourav Dhar <br><br>
+            <a href="https://fh4ntke.medium.com/hacking-the-university-in-a-few-steps-84e43e3c01a8" target="_blank">Hacking the University in a Few Steps</a> : FHantke <br><br>
+            <a href="https://infosecwriteups.com/how-i-couldve-bypassed-the-2fa-security-of-instagram-once-again-43c05cc9b755" target="_blank">How I could’ve bypassed the 2FA security of Instagram once again?</a> : Samip Aryal <br><br>
           </p>
         <br><br>
       </p>
