--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2400,8 +2400,11 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 117: April 26 2022</h3><br>
-      <p>Break Day</p>
+      <h3>Day 117: April 26 2022 - Day 118: April 27 2022</h3><br>
+      <p>
+        <a href="https://app.hackthebox.com/machines/452" target="_blank">Timelapse</a> : HackTheBox <br><br>
+        <a href="https://www.vulnhub.com/entry/digitalworldlocal-joy,298/" target="_blank">Joy</a> : VulnHub <br><br>
+      </p>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
