--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2404,6 +2404,7 @@
       <p>
         <a href="https://app.hackthebox.com/machines/452" target="_blank">Timelapse</a> : HackTheBox <br><br>
         <a href="https://www.vulnhub.com/entry/digitalworldlocal-joy,298/" target="_blank">Joy</a> : VulnHub <br><br>
+        <a href="https://picoctf.org/" target="_blank">PicoCTF</a> <br><br>
       </p>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
