--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2400,11 +2400,13 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 117: April 26 2022 - Day 118: April 27 2022</h3><br>
+      <h3>Day 117: April 26 2022 - Day 119: April 28 2022</h3><br>
       <p>
         <a href="https://app.hackthebox.com/machines/452" target="_blank">Timelapse</a> : HackTheBox <br><br>
         <a href="https://www.vulnhub.com/entry/digitalworldlocal-joy,298/" target="_blank">Joy</a> : VulnHub <br><br>
         <a href="https://picoctf.org/" target="_blank">PicoCTF</a> <br><br>
+        <a href="https://ctf.nahamcon.com/" target="_blank">NahamCon CTF 2022</a>
+        <a href="https://app.hackthebox.com/machines/456" target="_blank">Retired</a> : HackTheBox <br><br>
       </p>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
