--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2408,6 +2408,21 @@
         <a href="https://ctf.nahamcon.com/" target="_blank">NahamCon CTF 2022</a>
         <a href="https://app.hackthebox.com/machines/456" target="_blank">Retired</a> : HackTheBox <br><br>
       </p>
+      <br><br>
+      <h3>Day 120: April 29 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+
+          </p>
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
