--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2410,18 +2410,7 @@
       </p>
       <br><br>
       <h3>Day 120: April 29 2022</h3><br>
-      <p>
-        <h5>My Activities</h5>
-          <p>
-
-          </p>
-        <br><br>
-        <h5>Blogs Reads</h5>
-          <p> 
-
-          </p>
-        <br><br>
-      </p>
+      <p>Break Day</p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
