--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="https://writeups.adityadindi.me" target="_blank">WRITEUPS</a>
+            <a class="nav-link" href="https://pyrusgaming.gitbook.io" target="_blank">WRITEUPS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/daily-2022.html" target="_blank">DAILY</a>
