--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2405,12 +2405,34 @@
         <a href="https://app.hackthebox.com/machines/452" target="_blank">Timelapse</a> : HackTheBox <br><br>
         <a href="https://www.vulnhub.com/entry/digitalworldlocal-joy,298/" target="_blank">Joy</a> : VulnHub <br><br>
         <a href="https://picoctf.org/" target="_blank">PicoCTF</a> <br><br>
-        <a href="https://ctf.nahamcon.com/" target="_blank">NahamCon CTF 2022</a>
+        <a href="https://ctf.nahamcon.com/" target="_blank">NahamCon CTF 2022</a> <br><br>
         <a href="https://app.hackthebox.com/machines/456" target="_blank">Retired</a> : HackTheBox <br><br>
       </p>
       <br><br>
       <h3>Day 120: April 29 2022</h3><br>
       <p>Break Day</p>
+      <br><br>
+      <h3>Day 121: April 30 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://comptia-utsa-ctf.cyberdefenders.org/" target="_blank">CompTIA Student Chapter UTSA CTF</a> <br><br> 
+            <a href="https://www.twitch.tv/nahamsec" target="_blank">NahamCon2022</a> <br><br>
+            <a href="https://app.hackthebox.com/machines/429" target="_blank">Meta</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/machines/234" target="_blank">Remote</a> : HackTheBox <br><br>
+            <a href="https://academy.hackthebox.com/module/details/143" target="_blank">Active Directory Enumeration & Attacks</a> : HTB Academy <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://medium.com/r3d-buck3t/domain-takeover-with-petitpotam-exploit-3900f89b38f7" target="_blank">Domain Takeover with PetitPotam Exploit</a> : Nairuz Abulhul <br><br>
+            <a href="https://blog.blockmagnates.com/how-to-master-google-hacking-dorking-bd9b6e3d28fa" target="_blank">How to master Google Hacking (Dorking)</a> : Abhinav Pathak <br><br>
+            <a href="https://kamran-bilgrami.medium.com/ethical-hacking-lessons-building-free-active-directory-lab-in-azure-6c67a7eddd7f" target="_blank">Ethical Hacking Lessons — Building Free Active Directory Lab in Azure</a> : Kamran Bilgrami <br><br>
+            <a href="https://andrecamillo.medium.com/leveraging-mitre-tools-for-effective-threat-informed-archite-99f425567edd" target="_blank">Leveraging MITRE tools for effective Threat Informed Architecture</a> : Andre Camillo <br><br>
+            <a href="https://medium.com/@arthbajpai277/beginners-guide-of-bug-bounty-by-arth-bajpai-5c6eb27c023" target="_blank">Beginner’s Guide of Bug Bounty By Arth Bajpai</a> : Arth Bajpai <br><br>
+          </p>
+        <br><br>
+      </p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
