--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2434,6 +2434,9 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 121: May 1 2022</h3><br>
+      <p>Break Day</p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
